# epicenter

./: .gitignore  AGENTS.md  CONTRIBUTING.md  FINANCIAL_SUSTAINABILITY.md  HOW_TO_MONETIZE.md  LICENSE  README.md  biome.jsonc  jsrepo.config.ts  package.json  skills-lock.json  tsconfig.base.json  tsconfig.base.lib.json  turbo.json
.changeset/: agent-loop-max-step-guard.md  audience-scoped-bearer.md  config.json  rename-attach-kv-store-to-records.md  trim-daemon-public-surface.md  trusted-relay-remove-auth-keyring.md  trusted-relay-remove-workspace-encryption.md
.github/: CODEOWNERS  pull_request_template.md
apps/: README.md
apps/matter/src-tauri/: Cargo.toml  tauri.conf.json
apps/matter/src-tauri/capabilities/: default.json
apps/matter/src-tauri/src/: entry.rs  folder.rs  index.rs  lib.rs  main.rs  mirror.rs  watch.rs
docs/: CONTEXT.md  README.md  architecture.md  encryption.md  positioning.md  scripting.md  spec-history.md  svelte-5-createContext.md  transcribe-rs-api-design.md  trust-model.md  type-safe-context-factory-pattern.md
logos/: .gitignore  README.md  generate.ts
patches/: y-indexeddb@9.0.12.patch
scripts/: bump-version.ts  check-doc-hygiene.mjs  check-doc-hygiene.test.ts  check-doc-hygiene.ts  check-doc-paths.ts  check-license-graph.ts  check-ui-boundary.ts  claude-consult.test.ts  claude-consult.ts  clean.ts  dev.ts  generate-spec-history.mjs  generate-spec-history.ts  publish-packages.ts  sync-skills.ts
specs/: 20250103T002300-schema-naming-and-provider-context-refactor.md  20250107T123500-minimal-field-schema-refactor.md  20250107T143456-provider-to-capability-refactor.md  20250107T163200-remove-projectdir-from-capability-context.md  (+774 more)
(+2614 files in other folders)
