[package]
name = "matter"
version = "0.0.1"
description = "Matter desktop app"
authors = ["Epicenter"]
repository = "https://github.com/EpicenterHQ/epicenter"
edition = "2021"

[lib]
name = "matter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify-debouncer-full = "0.5"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
