[package]
name = "matter"
version = "0.0.1"
description = "Matter desktop app"
authors = ["Epicenter"]
repository = "https://github.com/EpicenterHQ/epicenter"
edition = "2021"

[lib]
name = "matter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notify-debouncer-full = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
